Fixed issue with images appearing too wide

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,10 +80,6 @@ img {
   max-width: 100%;
 }
 
-#informationPanel img {
-  width:100%;
-}
-
 /*Hero Styles*/
 
 .hero {
